ponyhug/ponyhug-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ponyhug-backend
  namespace: ponyhug
  labels:
    app: ponyhug-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ponyhug-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ponyhug-backend
    spec:
      containers:
        - name: ponyhug-backend
          image: marcsello/ponyhug-backend:15
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8000
          resources:
            requests:
              cpu: 50m
              memory: 150m
