ponyhug/ponyhug-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ponyhug-ingress
  namespace: ponyhug
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/revision-history-limit: "2"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - ponyhug.k8s.marcsello.com
      secretName: letsencrypt
  rules:
    - host: ponyhug.k8s.marcsello.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ponyhug-backend-svc
                port:
                  number: 80
